--- a/TemperatuurLogger/TemperatuurLogger.UI/Views/DownloadView.axaml
+++ b/TemperatuurLogger/TemperatuurLogger.UI/Views/DownloadView.axaml
@@ -4,7 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="500"
 		Height="500" Width="800" CanResize="False" SystemDecorations="BorderOnly"
-		BorderBrush="Teal" BorderThickness="5" Background="LightCyan"
+		BorderBrush="Black" BorderThickness="5" Background="LightCyan"
         x:Class="TemperatuurLogger.UI.Views.DownloadView"
 		xmlns:steps="using:TemperatuurLogger.UI.Views.DownloadSteps"
         Title="DownloadView">
@@ -29,8 +29,9 @@
 					Command="{Binding Cancel}"
 					CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">Cancel</Button>
 
-			<Button x:Name="next" Grid.Row="1" Grid.Column="2" Name="right" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="20" Margin="5"
-					Command="{Binding Next}" >
+			<Button Grid.Row="1" Grid.Column="2" Name="right" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="20" Margin="5"
+					Command="{Binding Next}"
+					CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
 				<Path Data="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" Fill="Black"/>
 			</Button>
 
