--- a/TemperatuurLogger/TemperatuurLogger.UI/Views/DownloadSteps/Step2ShowInfo.axaml
+++ b/TemperatuurLogger/TemperatuurLogger.UI/Views/DownloadSteps/Step2ShowInfo.axaml
@@ -1,16 +1,17 @@
 <UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="TemperatuurLogger.UI.Views.DownloadSteps.Step2ShowInfo">
-	<Grid ColumnDefinitions="2*,4*" RowDefinitions="Auto,Auto,Auto,Auto" HorizontalAlignment="Center" Width="700" Margin="0 10 0 0">
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+			 x:Class="TemperatuurLogger.UI.Views.DownloadSteps.Step2ShowInfo">
+	<Grid ColumnDefinitions="2*,4*, 100" RowDefinitions="Auto,Auto,Auto,Auto" HorizontalAlignment="Center" Width="700" Margin="0 10 0 0">
 		<Label Grid.Row="0">Logger</Label>
 		<Label Grid.Row="1">Serienummer</Label>
 		<Label Grid.Row="2">Aantal metingen</Label>
 		<Label Grid.Row="3">Vorige download</Label>
-		
-		<Label Grid.Row="0" Grid.Column="1" Content="{Binding LoggerName}"/>
+
+		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding LoggerName}" IsReadOnly="{Binding  LoggerIsKnown}" ></TextBox>
+		<Button Grid.Row="0" Grid.Column="2" Content="Aanmaken" Command="{Binding CreateLogger}" />
 		<Label Grid.Row="1" Grid.Column="1" Content="{Binding SerialNumber}"/>
 		<Label Grid.Row="2" Grid.Column="1" Content="{Binding NumberOfLogs}" />
 		<Label Grid.Row="3" Grid.Column="1" Content="{Binding LastDownload}" />
