--- a/TemperatuurLogger/TemperatuurLogger.UI/Views/DownloadView.axaml
+++ b/TemperatuurLogger/TemperatuurLogger.UI/Views/DownloadView.axaml
@@ -3,14 +3,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="500"
-		Height="500" Width="800" CanResize="False" SystemDecorations="BorderOnly"
-		BorderBrush="Black" BorderThickness="5" Background="LightCyan"
+		Height="500" Width="800" CanResize="False" SystemDecorations="BorderOnly" BorderThickness="5" BorderBrush="DarkBlue"
+		Background="LightCyan"
         x:Class="TemperatuurLogger.UI.Views.DownloadView"
 		xmlns:steps="using:TemperatuurLogger.UI.Views.DownloadSteps"
         Title="DownloadView">
 	
 	<Grid>
-		<Grid ColumnDefinitions="1*,10*,1*" RowDefinitions="Auto,Auto">
+		<Grid ColumnDefinitions="4*,10*,4*" RowDefinitions="Auto,Auto">
 			<!--
 			<Button x:Name="previous"  Grid.Row="1" Name="left" VerticalAlignment="Center" Padding="20" Margin="5" IsEnabled="False">
 				<Path Data="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z" Fill="Black"/>
@@ -18,7 +18,7 @@
 			-->
 			<Carousel x:Name="carousel" Grid.ColumnSpan="3" Name="carousel" Width="800" Height="400" >
 				<steps:Step1Detect />
-				<steps:Step2ShowInfo/>
+				<steps:Step2ShowInfo DataContext="{Binding DeviceDetailsInfo}" />
 				<steps:Step3Download/>
 				<steps:Step4Persist/>
 				<steps:Step5Reset/>
@@ -27,14 +27,13 @@
 
 			<Button x:Name="cancel" Grid.Row="1" Grid.Column="1" VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="5"
 					Command="{Binding Cancel}"
-					CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">Cancel</Button>
+					CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+					Content="{Binding CancelActionText}" />
 
-			<Button Grid.Row="1" Grid.Column="2" Name="right" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="20" Margin="5"
+			<Button Grid.Row="1" Grid.Column="2" Name="right" VerticalAlignment="Stretch" HorizontalAlignment="Right" VerticalContentAlignment="Center" Margin="5"
 					Command="{Binding Next}"
-					CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
-				<Path Data="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z" Fill="Black"/>
-			</Button>
-
+					CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
+					Content ="{Binding NextActionText}"/>
 		</Grid>
 	</Grid>
 	
