--- a/TemperatuurLogger/TemperatuurLogger.UI/Views/MainWindow.axaml
+++ b/TemperatuurLogger/TemperatuurLogger.UI/Views/MainWindow.axaml
@@ -6,44 +6,67 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="TemperatuurLogger.UI.Views.MainWindow"
 		x:Name="MainWindow"
+		Design.Width="1024"
+		Design.Height="800"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Apotheek Saelens"
+        Title="Apotheek Sigrid Saelens BV"
 		CanResize="False"
-		Height="450" Width="800">
+		HasSystemDecorations="False"
+		Topmost="True"
+		WindowState="Maximized">
 
 	<Design.DataContext>
 		<vm:MainWindowViewModel/>
 	</Design.DataContext>
-	<Grid ColumnDefinitions="1*,2*,1*" RowDefinitions="150,2*,5*" >
-		<Image Grid.Row="0" Source="/Assets/logo.png" Margin="10"/>
-		<StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical">
-			<TextBlock Text="TEMPERATUURMETINGEN"  HorizontalAlignment="Center" Margin="10"
-					   FontFamily="Arial Rounded MT" FontSize="28" />
-			<Image Source="/Assets/dl-usb-t.png" />
-		</StackPanel>
+	<Grid ColumnDefinitions="1*,2*,1*" RowDefinitions="Auto,2*,5*" ShowGridLines="True" >
+		<Grid>
+			<Image Grid.Row="0" Source="/Assets/logo.png" Margin="25"/>
+		</Grid>
+		<TextBlock Grid.Column="1" Text="TEMPERATUURMETINGEN"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"
+					   FontFamily="Comic Sans Ms" FontWeight="UltraBold" Foreground="Green" FontSize="48" />
+		<Grid Grid.Row="1" Grid.Column="1" RowDefinitions="Auto,20,Auto" VerticalAlignment="Center" >
 
-		<Border Grid.Row="2" Grid.Column="0" BorderThickness="5" CornerRadius="15" BorderBrush="Teal" Margin="5">
-			<Button  Background="Transparent"
-					 Command="{Binding StartDownloadWizard}"
-					CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
-				<Panel Width="200" Height="200">
-					<Grid RowDefinitions="Auto,Auto">
-						<TextBlock HorizontalAlignment="Center" Margin="10" Text="UITLEZEN"/>
-						<Image Grid.Row="1" Source="/Assets/download.png" Height="120" />
-					</Grid>
-				</Panel>
-			</Button>
-		</Border>
+			<Image Grid.Row="2" Source="/Assets/dl-usb-t.png" />
+		</Grid>
 
-		<Border Grid.Row="2" Grid.Column="2" BorderThickness="5" CornerRadius="15" BorderBrush="Teal" Margin="5">
-			<Button  Background="Transparent">
-				<Panel Width="200" Height="200">
-					<Grid RowDefinitions="Auto,Auto">
-						<TextBlock HorizontalAlignment="Center" Margin="10" Text="RAPPORTEREN"/>
-						<Image Grid.Row="1" Source="/Assets/printer.png" Height="120" />
-					</Grid>
-				</Panel>
-			</Button>
-		</Border>
+		<Grid Grid.Row="0" Grid.Column="2"  RowDefinitions="Auto,Auto,*">
+			<TextBlock Grid.Row="0" HorizontalAlignment="Center" Margin="10" Text="AFSLUITEN"/>
+			<Border Grid.Row="1" BorderThickness="5" CornerRadius="15" BorderBrush="Teal" Margin="5">
+				<Button  Background="Transparent" HorizontalAlignment="Stretch"
+						 Command="{Binding ExitCommand}"
+						 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
+					<Panel Width="200" Height="200">
+						<Image Source="/Assets/exit.png" Stretch="Fill" />
+					</Panel>
+				</Button>
+			</Border>
+		</Grid>
+
+		<Grid Grid.Row="2" Grid.Column="0" RowDefinitions="*,Auto,Auto">
+			<TextBlock Grid.Row="1" HorizontalAlignment="Center" Margin="10" Text="UITLEZEN"/>
+			<Border Grid.Row="2" BorderThickness="5" CornerRadius="15" BorderBrush="Teal" Margin="5">
+				<Button Background="Transparent" HorizontalAlignment="Stretch"
+						 Command="{Binding StartDownloadWizardCommand}"
+						CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
+					<Panel Width="200" Height="200">
+						<Image Source="/Assets/download.png" Height="120" />
+					</Panel>
+				</Button>
+			</Border>
+		</Grid>
+		<Grid Grid.Row="2" Grid.Column="2" RowDefinitions="*,Auto,Auto">
+			<TextBlock Grid.Row="1" HorizontalAlignment="Center" Margin="10" Text="RAPPORTEREN"/>
+			<Border Grid.Row="2" BorderThickness="5" CornerRadius="15" BorderBrush="Teal" Margin="5">
+				<Button  Background="Transparent" HorizontalAlignment="Stretch"
+						 Command="{Binding StartReportCommand}"
+						 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
+					<Panel Width="200" Height="200">
+						<Grid RowDefinitions="Auto,Auto">
+							<Image Grid.Row="1" Source="/Assets/printer.png" />
+						</Grid>
+					</Panel>
+				</Button>
+			</Border>
+		</Grid>
 	</Grid>
 </Window>
