--- a/TemperatuurLogger/TemperatuurLogger.UI/Views/DownloadView.axaml
+++ b/TemperatuurLogger/TemperatuurLogger.UI/Views/DownloadView.axaml
@@ -12,15 +12,11 @@
 		Topmost="True"
 		WindowState="Maximized">
 		
-		<Grid ColumnDefinitions="3*,10*,3*" RowDefinitions="80,*,80" ShowGridLines="True">
-			<!--
-			<Button x:Name="previous"  Grid.Row="1" Name="left" VerticalAlignment="Center" Padding="20" Margin="5" IsEnabled="False">
-				<Path Data="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z" Fill="Black"/>
-			</Button>
-			-->
+		<Grid ColumnDefinitions="3*,10*,3*" RowDefinitions="80,*,120" ShowGridLines="True">
+			
 			<TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" FontFamily="Comic Sans MS" Foreground="Green" FontSize="36" HorizontalAlignment="Center">DOWNLOADEN TEMPERATUREN</TextBlock>
 			
-			<Carousel x:Name="carousel" Grid.Row="1" Grid.ColumnSpan="3" Name="carousel" Background="Red" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Stretch">
+			<Carousel x:Name="carousel" Grid.Row="1" Grid.Column="1" Name="carousel" Background="Red" Margin="5" >
 				<steps:Step1Detect />
 				<steps:Step2ShowInfo DataContext="{Binding DeviceDetailsInfo}" />
 				<steps:Step3Download/>
@@ -29,16 +25,30 @@
 				<steps:Step6Done/>
 			</Carousel>
 
-			<Grid Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2">
-			<Button x:Name="cancel" Grid.Row="1" Grid.Column="1" VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="5"
-					Command="{Binding Cancel}" MinWidth="100" MinHeight="55"
-					CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-					Content="{Binding CancelActionText}" />
+			<Grid Grid.Row="2" Grid.Column="1" ColumnDefinitions="3*,3*,4*,3*" RowDefinitions="*,Auto" ShowGridLines="True">
+				<TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="10" Text="{Binding CancelActionText}"/>
+				<Border Grid.Row="2" Grid.Column="1" BorderThickness="5" CornerRadius="15" BorderBrush="Teal" Margin="5">
+					<Button x:Name="cancel"   VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="5"
+							Command="{Binding Cancel}" MinWidth="100" MinHeight="55"
+							CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" 
+							BorderBrush="Transparent">
+						<Panel Width="200" Height="200">
+							<Image Source="/Assets/cancel.png" Height="120" Stretch="Uniform" />
+						</Panel>
+					</Button>
+				</Border>
 
-			<Button Grid.Row="1" Grid.Column="2" Name="right" VerticalAlignment="Stretch" HorizontalAlignment="Right" VerticalContentAlignment="Center" Margin="5" 
-					Command="{Binding Next}" MinWidth="100"
-					CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-					Content ="{Binding NextActionText}"/>
+				<TextBlock Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" Margin="10" Text="{Binding NextActionText}" />
+				<Border Grid.Row="2" Grid.Column="3" BorderThickness="5" CornerRadius="15" BorderBrush="Teal" Margin="5">
+
+					<Button  Name="right" VerticalAlignment="Stretch" HorizontalAlignment="Right" VerticalContentAlignment="Center" Margin="5"
+						Command="{Binding Next}" MinWidth="100"
+						CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" >
+						<Panel Width="200" Height="200">
+							<Image Source="/Assets/continue.png" Height="120" />
+						</Panel>
+					</Button>
+				</Border>
 		</Grid>
 	</Grid>
 	
