--- a/TemperatuurLogger/TemperatuurLogger.UI/Views/MainWindow.axaml
+++ b/TemperatuurLogger/TemperatuurLogger.UI/Views/MainWindow.axaml
@@ -54,19 +54,31 @@
 				</Button>
 			</Border>
 		</Grid>
-		<Grid Grid.Row="2" Grid.Column="2" RowDefinitions="*,Auto,Auto">
-			<TextBlock Grid.Row="1" HorizontalAlignment="Center" Margin="10" Text="RAPPORTEREN"/>
-			<Border Grid.Row="2" BorderThickness="5" CornerRadius="15" BorderBrush="Teal" Margin="5">
-				<Button  Background="Transparent" HorizontalAlignment="Stretch"
-						 Command="{Binding StartReportCommand}"
-						 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
-					<Panel Width="200" Height="200">
-						<Grid RowDefinitions="Auto,Auto">
-							<Image Grid.Row="1" Source="/Assets/printer.png" />
-						</Grid>
-					</Panel>
+
+		<Grid Grid.Row="2" Grid.Column="1" RowDefinitions="*,Auto,Auto" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+			<TextBlock Grid.Row="1">Instellingen</TextBlock>
+			<Border Grid.Row="2" BorderThickness="2" CornerRadius="10" BorderBrush="Black" Margin="5">
+				<Button Background="Transparent">
+					<Panel Width="50" Height="50">
+						<Image Source="/Assets/settings.png" Height="50" />
+					</Panel>					
 				</Button>
 			</Border>
 		</Grid>
+
+			<Grid Grid.Row="2" Grid.Column="2" RowDefinitions="*,Auto,Auto">
+				<TextBlock Grid.Row="1" HorizontalAlignment="Center" Margin="10" Text="RAPPORTEREN"/>
+				<Border Grid.Row="2" BorderThickness="5" CornerRadius="15" BorderBrush="Teal" Margin="5">
+					<Button  Background="Transparent" HorizontalAlignment="Stretch"
+							 Command="{Binding StartReportCommand}"
+							 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
+						<Panel Width="200" Height="200">
+							<Grid RowDefinitions="Auto,Auto">
+								<Image Grid.Row="1" Source="/Assets/printer.png" />
+							</Grid>
+						</Panel>
+					</Button>
+				</Border>
+			</Grid>
 	</Grid>
 </Window>
