--- a/TemperatuurLogger/TemperatuurLogger.UI/Views/ReportSteps/Step1CriteriaEntry.axaml
+++ b/TemperatuurLogger/TemperatuurLogger.UI/Views/ReportSteps/Step1CriteriaEntry.axaml
@@ -5,17 +5,34 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="TemperatuurLogger.UI.Views.ReportSteps.Step1CriteriaEntry">
   <Grid RowDefinitions="Auto,Auto,*" ColumnDefinitions="1*,1*">
-    <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
+    <ComboBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
 				  PlaceholderText="Kies een logger..."
-				  Items="{Binding Loggers}" SelectedItem="{Binding SelectedLogger}" >
+				  Items="{Binding Loggers}" SelectedItem="{Binding SelectedLogger}" 
+				 Margin="5" Width="250">
 			<ComboBox.ItemTemplate>
 				<DataTemplate>
 					<TextBlock Text="{Binding Name}"/>
 				</DataTemplate>
 			</ComboBox.ItemTemplate>
 		</ComboBox>
-		
-		<Calendar Grid.Row="2" Grid.Column="1" SelectedDate="{Binding FromDate}" Margin="0 0 5 0" DisplayMode="Month" />
-		<Calendar Grid.Row="2" Grid.Column="2" IsTodayHighlighted="True" SelectedDate="{Binding EndDate}"  Margin="5 0 0 0" DisplayMode="Month"/>
+
+	  <Grid Grid.Row="1" Grid.Column="0" RowDefinitions="35,Auto">
+		  <TextBlock HorizontalAlignment="Center">Van</TextBlock>
+		<Calendar Grid.Row="1"
+				  SelectionMode="SingleDate"
+				  DisplayDate="{Binding FromDate}"
+				  DisplayDateStart="{Binding LoggerFromDate}"
+				  DisplayDateEnd="{Binding EndDate}"
+				  SelectedDate="{Binding FromDate}" Margin="5" DisplayMode="Month" />
+	  </Grid>
+	  <Grid Grid.Row="1" Grid.Column="1" RowDefinitions="35,Auto">
+		  <TextBlock HorizontalAlignment="Center">Tot</TextBlock>
+		<Calendar Grid.Row="1" 
+				  DisplayDate="{Binding EndDate}"
+				  DisplayDateStart="{Binding FromDate}"
+				  DisplayDateEnd="{Binding LoggerEndDate}"
+				  SelectionMode="SingleDate" 
+				  SelectedDate="{Binding EndDate}"  Margin="5" DisplayMode="Month"/>
+		  </Grid>
 </Grid>
 </UserControl>
